Fix page layout to align all left

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -7,8 +7,6 @@ body {
 
 .container {
   padding: 0 45px;
-  max-width: 1280px;
-  margin: 0 auto;
 }
 
 .page {
@@ -18,6 +16,7 @@ body {
   justify-content: space-between;
   padding-top: $base-spacing * 2;
   padding-bottom: $base-spacing * 4;
+  padding-right: 45px;
 }
 
 .sidebar {
@@ -27,4 +26,5 @@ body {
 
 .main {
   width: 66%;
+  max-width: 720px;
 }
