--- a/src/styles/blocks/_sub-navigation.scss
+++ b/src/styles/blocks/_sub-navigation.scss
@@ -6,7 +6,7 @@
     display: block;
     padding: $base-spacing/2;
     margin: 0 0 $base-spacing/2;
-    padding-left: $base-spacing;
+    padding-left: 45px;
 
     &:hover,
     &--selected {
